feat(ui): add google analytics

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -26,6 +26,15 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139882771-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-139882771-4');
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
