fix(ui): update google analytics id and filter url

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -26,15 +26,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139882771-4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-139882771-4');
-    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -47,4 +38,19 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script>
+    if(window.location.href.indexOf('explorer.nervos.org') > -1){
+      var googleScript = document.createElement("script");
+      googleScript.src = "https://www.googletagmanager.com/gtag/js?id=UA-139882771-4"
+      googleScript.async = true;
+      googleScript.onload = function() {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-139882771-4');
+      }
+      document.body.append(googleScript)
+    }
+  </script>
 </html>
