--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>CKB Explorer</title>
   </head>
-  <body>
+  <body data-chain-type="%REACT_APP_CHAIN_TYPE%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
